--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Click-Memory-Game",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://stsend90.github.io/Click-Memory-Game",
+  "homepage": "http://stsend90.github.io/Click-Memory-Game",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
